@@ -1061,6 +1061,25 @@ AAA
         result = ufw.util.hex_decode(s)
         self.assertEquals(expected, result)
 
+        # test odd length string mitigation by truncating one hex-digit. This
+        # should result in the last (odd) hex digit being dropped and a decoded
+        # string of one less character
+        expected = "foo👍bar字ba"
+        if sys.version_info[0] < 3:
+            expected = u"foo👍bar字ba"
+        result = ufw.util.hex_decode(s[:-1])
+        self.assertEquals(expected, result)
+
+        # test odd length string mitigation by removing first hex-digit. This
+        # should result in the last (odd) hex digit being dropped, but since
+        # the first hex digit was removed, the byte sequence is shifted by one
+        # which causes the whole string to be 'backslashreplace'd.
+        expected = "f\\xf6\\xff\t\\xf9\x18\\xd6&\x17.Z\\xd9v&\x17"
+        if sys.version_info[0] < 3:
+            expected = u"f\\xf6\\xff\t\\xf9\x18\\xd6&\x17.Z\\xd9v&\x17"
+        result = ufw.util.hex_decode(s[1:])
+        self.assertEquals(expected, result)
+
     def test_create_lock(self):
         '''Test create_lock()'''
         lock = ufw.util.create_lock(dryrun=True)
