@@ -8,6 +8,7 @@ ufw (0.36.2) UNRELEASED; urgency=medium
   * src/backend_iptables.py: remove unreachable code (LP: #1927734)
   * src/util.py:
     - properly parse /proc/pid/stat for WSL (LP: #2015645)
+    - mitigate odd length string with unhexlify (Closes: 1034568)
 
  -- Jamie Strandboge <jdstrand@ubuntu.com>  Tue, 16 May 2023 07:58:56 -0500
 
